minor visual bug on mobile devices
A user was experiencing a problem with his phone where the comment field did not have a width and was not possible to type correctly on his device this code seemed to fix his problem and allow him to post correctly again from his blackberry device

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -400,3 +400,7 @@ table.mod.config-editor td {
 table.mod.config-editor input[type="text"] {
 	width: 98%;
 }
+textarea#body {
+width:100%;
+}
+
